updates to stylesheet and readme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--accurate title needed-->
-    <title>Horiseon Social Solutions Services</title>
+    <title>Horiseon Social Solutions</title>
 </head>
 
 <body>
@@ -27,6 +27,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
+        <!--content class description-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Seach Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -73,7 +74,8 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <!--footer description-->
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
