--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
-                <li>
+                <li> <!--links-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
