--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <!--accurate title needed-->
     <title>Horiseon Social Solutions</title>
 </head>
-
 <body>
+    <!--navigation -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <nav>
             <ul>
-                <li> <!--links-->
+                <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -23,11 +24,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+            </nav>
         </div>
     </div>
+    <!--hero jumbotron-->
     <div class="hero"></div>
     <div class="content">
-        <!--content class description-->
+    <!--search engine optimization-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Seach Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -35,6 +38,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+        <!--online reputation management-->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -42,6 +46,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+        <!--social media marketing-->
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -50,6 +55,7 @@
             </p>
         </div>
     </div>
+    <!--benefits-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -74,12 +80,10 @@
         </div>
     </div>
     <div class="footer">
-        <!--footer description-->
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
-
 </html>
